--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ justify-content: center;
 }
 
 .info-card span{
-    font-size: 0.7em;
+    font-size: 1em;
     font-weight: 300;
 }
 
@@ -164,6 +164,18 @@ justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 4em;
+}
+
+.form.none{
+    display: none;
+}
+
+.msg-sended.none{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 70%;
 }
 
 .form form{
@@ -187,6 +199,14 @@ form input{
     box-shadow: 2px 2px 5px black;
 }
 
+input.invalid{
+    border: 1px solid red;
+}
+
+.error{
+    font-size: 12px;
+    color: red;
+}
 
 .form-down{
     display: flex;
@@ -217,6 +237,20 @@ button{
     font-family: 'Space Grotesk', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
+    cursor: pointer;
+}
+
+.msg-sended{
+    text-align: center;
+    display: none;
+}
+
+.msg-sended div{
+    width: 22em;
+}
+
+.reinicio{
+    width: 100%;
 }
 
 
@@ -264,5 +298,18 @@ button{
         margin-bottom: -2em;
         margin-top: -5em;
         
+    }
+
+    .msg-sended{
+        display: none;
+    }
+
+    .msg-sended.none{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 8em;
     }
 }
